--- a/html/assets/scss/pages/_404.scss
+++ b/html/assets/scss/pages/_404.scss
@@ -1,8 +1,10 @@
 /* ============================================================================
-   LAYOUT -> media
+   PAGES -> 404
    ========================================================================= */
 
 
-.l-media{
-	//
+.p-404{
+	.l-content{
+		min-height: calc(100vh - 180px - 16px);
+	}
 }
