--- a/html/assets/scss/pages/__module.scss
+++ b/html/assets/scss/pages/__module.scss
@@ -2,4 +2,7 @@
    PAGES
    ========================================================================= */
 
+@import 'page';
 @import 'front';
+@import 'category';
+@import '404';
