--- a/html/assets/scss/pages/_front.scss
+++ b/html/assets/scss/pages/_front.scss
@@ -4,24 +4,5 @@
 
 
 .p-front{
-	&__wrapper{
-		@include viewport-min(lg){
-			display: flex;
-			// align-items: baseline;
-			.l-header{
-				flex: 0 0 auto;
-				min-width: 0;
-				margin: 1rem 2rem 1rem 0;
-			}
-			.l-body{
-				flex: 1 1 auto;
-				min-width: 0;
-				margin: 0 0 1rem;
-			}
-			.l-content{
-				background-color: #fff;
-				// padding: 1rem;
-			}
-		}
-	}
+	//
 }
